src/tests/snapshots/rust_poker__tests__can_have_twopairs__tests__nopair_board.snap
---
source: src/tests/can_have_twopairs.rs
expression: combis
---
[
    (
        [
            Card {
                value: 14,
                suit: H,
            },
            Card {
                value: 8,
                suit: D,
            },
            Card {
                value: 10,
                suit: C,
            },
            Card {
                value: 2,
                suit: S,
            },
            Card {
                value: 3,
                suit: S,
            },
        ],
        [
            [
                [
                    Card {
                        value: 14,
                        suit: A,
                    },
                    Card {
                        value: 10,
                        suit: A,
                    },
                ],
            ],
            [
                [
                    Card {
                        value: 14,
                        suit: A,
                    },
                    Card {
                        value: 8,
                        suit: A,
                    },
                ],
            ],
            [
                [
                    Card {
                        value: 14,
                        suit: A,
                    },
                    Card {
                        value: 3,
                        suit: A,
                    },
                ],
            ],
            [
                [
                    Card {
                        value: 14,
                        suit: A,
                    },
                    Card {
                        value: 2,
                        suit: A,
                    },
                ],
            ],
            [
                [
                    Card {
                        value: 10,
                        suit: A,
                    },
                    Card {
                        value: 8,
                        suit: A,
                    },
                ],
            ],
            [
                [
                    Card {
                        value: 10,
                        suit: A,
                    },
                    Card {
                        value: 3,
                        suit: A,
                    },
                ],
            ],
            [
                [
                    Card {
                        value: 10,
                        suit: A,
                    },
                    Card {
                        value: 2,
                        suit: A,
                    },
                ],
            ],
            [
                [
                    Card {
                        value: 8,
                        suit: A,
                    },
                    Card {
                        value: 3,
                        suit: A,
                    },
                ],
            ],
            [
                [
                    Card {
                        value: 8,
                        suit: A,
                    },
                    Card {
                        value: 2,
                        suit: A,
                    },
                ],
            ],
            [
                [
                    Card {
                        value: 3,
                        suit: A,
                    },
                    Card {
                        value: 2,
                        suit: A,
                    },
                ],
            ],
        ],
    ),
]
