src/tests/snapshots/rust_poker__tests__can_have_twopairs__tests__pair2_board.snap
---
source: src/tests/can_have_twopairs.rs
expression: combis
---
[
    (
        [
            Card {
                value: 14,
                suit: H,
            },
            Card {
                value: 14,
                suit: S,
            },
            Card {
                value: 8,
                suit: A,
            },
        ],
        [
            [
                [
                    Card {
                        value: 13,
                        suit: A,
                    },
                    Card {
                        value: 8,
                        suit: A,
                    },
                ],
            ],
            [
                [
                    Card {
                        value: 12,
                        suit: A,
                    },
                    Card {
                        value: 8,
                        suit: A,
                    },
                ],
            ],
            [
                [
                    Card {
                        value: 11,
                        suit: A,
                    },
                    Card {
                        value: 8,
                        suit: A,
                    },
                ],
            ],
            [
                [
                    Card {
                        value: 9,
                        suit: A,
                    },
                    Card {
                        value: 8,
                        suit: A,
                    },
                ],
            ],
            [
                [
                    Card {
                        value: 7,
                        suit: A,
                    },
                    Card {
                        value: 8,
                        suit: A,
                    },
                ],
            ],
            [
                [
                    Card {
                        value: 6,
                        suit: A,
                    },
                    Card {
                        value: 8,
                        suit: A,
                    },
                ],
            ],
            [
                [
                    Card {
                        value: 5,
                        suit: A,
                    },
                    Card {
                        value: 8,
                        suit: A,
                    },
                ],
            ],
            [
                [
                    Card {
                        value: 4,
                        suit: A,
                    },
                    Card {
                        value: 8,
                        suit: A,
                    },
                ],
            ],
            [
                [
                    Card {
                        value: 3,
                        suit: A,
                    },
                    Card {
                        value: 8,
                        suit: A,
                    },
                ],
            ],
            [
                [
                    Card {
                        value: 2,
                        suit: A,
                    },
                    Card {
                        value: 8,
                        suit: A,
                    },
                ],
            ],
        ],
    ),
]
